Added balance route.
